# fh_kiel_ical_splitter

./: .gitignore  .rustfmt.toml  .typos.toml  Cargo.toml  README.md  deny.toml  flake.nix
.github/workflows/: audit.yml  deploy.yml  rust.yml  style-check.yml
src/: error.rs  main.rs  prelude.rs
